# meetscribe

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
apps/backend/: .env.example  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: index.ts
apps/backend/src/lib/: env.ts  http.ts  jwt.ts  password.ts  prisma.ts
apps/backend/src/middleware/: auth.ts  errorHandler.ts
apps/backend/src/routes/: auth.ts  projects.ts  sessions.ts
apps/backend/src/services/: authService.ts  sessionService.ts
apps/desktop/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  tokens.rs
apps/desktop/src/api/: client.ts
apps/desktop/src/components/: AuthForm.tsx
apps/desktop/src/components/Bar/: Bar.tsx
apps/desktop/src/hooks/: useAuth.ts  useEngine.ts
apps/desktop/src/lib/: llmConfig.ts  transcriptionConfig.ts
apps/desktop/src/types/: index.ts
models/: README.md
native/: README.md  SystemAudioTap.swift
sidecar/: .env.example  README.md  audio.py  config.py  db.py  main.py  protocol.py  requirements.txt  summarise.py  sync.py  transcribe_batch.py  transcribe_realtime.py  transcript_client.py
transcript-service/: .env.example  Dockerfile  README.md  app.py  requirements.txt
(+11 files in other folders)
