[package]
name = "meetscribe"
version = "0.1.0"
description = "MeetScribe desktop"
authors = ["MeetScribe"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "meetscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
# OS keychain for access/refresh tokens (satisfies the "store tokens in the OS
# keychain" goal from the spec; see note in README re: tauri-plugin-stronghold).
keyring = "3"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
